WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
77578
REGRESSION (
r104727
): Strange graphics corruption opening a new tab in Safari
https://bugs.webkit.org/show_bug.cgi?id=77578
Summary
REGRESSION (r104727): Strange graphics corruption opening a new tab in Safari
Anders Carlsson
Reported
2012-02-01 15:01:58 PST
REGRESSION (
r104727
): Strange graphics corruption opening a new tab in Safari
Attachments
Patch
(3.26 KB, patch)
2012-02-01 15:12 PST
,
Anders Carlsson
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Anders Carlsson
Comment 1
2012-02-01 15:12:23 PST
Created
attachment 125027
[details]
Patch
Anders Carlsson
Comment 2
2012-02-01 15:55:09 PST
Committed
r106508
: <
http://trac.webkit.org/changeset/106508
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug