REGRESSION (r104727): Strange graphics corruption opening a new tab in Safari https://bugs.webkit.org/show_bug.cgi?id=77578 <rdar://problem/10767174>

Reviewed by Dan Bernstein.

Resizing a window will always invalidate the window backing store, so make sure to set
_data->_windowHasValidBackingStore to NO whenever that happens.

* UIProcess/API/mac/WKView.mm:
(-[WKView addWindowObserversForWindow:]):
Use separate methods for the NSWindowDidMoveNotification and NSWindowDidResizeNotification notifications.

(-[WKView _windowDidMove:]):
Call -[WKView _updateWindowAndViewFrames].

(-[WKView _windowDidResize:]):
Call -[WKView _updateWindowAndViewFrames] and mark the window backing store as invalid.

git-svn-id: svn://svn.chromium.org/blink/trunk@106508 bbb929c8-8fbe-4397-9dbb-9b2b20218538